Implement working version of PhD and potential supervisor lookup and matching Closes #4, closes #5. closes #6

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -34,15 +34,19 @@
     "from pyalex import Works, Authors, Sources, Institutions, Topics, Publishers, Funders, Concepts\n",
     "import pyalex # seems to be the only way to call `pyalex.config.email = email_address`\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import urllib.parse\n",
-    "import re\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
     "from os import path\n",
-    "import contextlib # piping print output to logfile\n",
     "\n",
-    "from src.unabbreviate_institutions import unabbreviate_institutions\n"
+    "from src.unabbreviate_institutions import unabbreviate_institutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of rows to read of the full dataset.\n",
+    "NROWS = 25 # None for all"
    ]
   },
   {
@@ -111,9 +115,16 @@
    "source": [
     "pubs_df = pd.read_csv('data/cleaned/pubs.csv')\n",
     "\n",
-    "# replace institution abbreviation with names that can be found in OpenAlex\n",
-    "pubs_df = unabbreviate_institutions(pubs_df, 'institution')\n",
-    "\n",
+    "# Take a sample\n",
+    "if NROWS == None:\n",
+    "    n_sample = len(pubs_df)\n",
+    "else:\n",
+    "    n_sample = NROWS\n",
+    "    \n",
+    "#pubs_df = pubs_df.sample(n=n_sample, random_state=42).reset_index(drop=True)\n",
+    " \n",
+    "pubs_df = pubs_df.head(NROWS) # use head for now because we actually do find some of these PhDs\n",
+    "    \n",
     "pubs_df"
    ]
   },
@@ -122,7 +133,375 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# replace institution abbreviation with names that can be found in OpenAlex\n",
+    "pubs_unabbrev_df = unabbreviate_institutions(pubs_df, 'institution')\n",
+    "pubs_unabbrev_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Extraction Object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "from pyalex import Authors, Works\n",
+    "import pandas as pd\n",
+    "\n",
+    "class AuthorRelations:\n",
+    "    def __init__(self, phd_name, title, year, institution, contributors, years_tolerance=0, verbosity='INFO'):\n",
+    "        self.phd_name = phd_name\n",
+    "        self.title = title\n",
+    "        self.year = year\n",
+    "        self.institution = institution\n",
+    "        self.contributors = contributors\n",
+    "        self.years_tolerance = years_tolerance  # Changed from 'tolerance' to 'years_tolerance'\n",
+    "        self.phd_candidate = None\n",
+    "        self.potential_supervisors = []\n",
+    "        self.verbosity = verbosity.upper()\n",
+    "        \n",
+    "        # Define target years as a property of the object\n",
+    "        self.target_years = self.calculate_target_years()\n",
+    "        \n",
+    "        # Setup logging\n",
+    "        self.logger = logging.getLogger(__name__)\n",
+    "        self.setup_logging()\n",
+    "\n",
+    "    def calculate_target_years(self):\n",
+    "        \"\"\"\n",
+    "        Calculates the target years based on the years_tolerance.\n",
+    "        If years_tolerance is negative, includes years before self.year.\n",
+    "        If years_tolerance is positive, includes years after self.year.\n",
+    "        \"\"\"\n",
+    "        if self.years_tolerance == 0:\n",
+    "            return [self.year]\n",
+    "        elif self.years_tolerance > 0:\n",
+    "            return list(range(self.year, self.year + self.years_tolerance + 1))\n",
+    "        else:  # years_tolerance < 0\n",
+    "            return list(range(self.year + self.years_tolerance, self.year + 1))\n",
+    "        \n",
+    "    def setup_logging(self):\n",
+    "        # Map verbosity levels to logging levels\n",
+    "        verbosity_levels = {\n",
+    "            'NONE': logging.WARNING,\n",
+    "            'INFO': logging.INFO,\n",
+    "            'DEBUG': logging.DEBUG\n",
+    "        }\n",
+    "        log_level = verbosity_levels.get(self.verbosity, logging.INFO)\n",
+    "        self.logger.setLevel(log_level)\n",
+    "\n",
+    "        # Remove all handlers associated with the logger\n",
+    "        for handler in self.logger.handlers[:]:\n",
+    "            self.logger.removeHandler(handler)\n",
+    "        # Set propagate to False to prevent messages from being printed to the console\n",
+    "        self.logger.propagate = False\n",
+    "\n",
+    "        # Create a file handler with UTF-8 encoding\n",
+    "        file_handler = logging.FileHandler('author_relations.log', encoding='utf-8')\n",
+    "        file_handler.setLevel(log_level)\n",
+    "\n",
+    "        # Create a logging format\n",
+    "        formatter = logging.Formatter('%(asctime)s - %(levelname)s - %(message)s')\n",
+    "        file_handler.setFormatter(formatter)\n",
+    "\n",
+    "        # Add the handler to the logger\n",
+    "        self.logger.addHandler(file_handler)\n",
+    "\n",
+    "\n",
+    "    def search_phd_candidate(self, criteria):\n",
+    "        \"\"\"\n",
+    "        Search for the PhD candidate by name and validate based on criteria.\n",
+    "        Criteria options: 'affiliation', 'title', 'both'\n",
+    "        \"\"\"\n",
+    "        self.logger.info(f\"Searching for PhD candidate: {self.phd_name}\")\n",
+    "        # Search for candidates by PhD name\n",
+    "        candidates = Authors().search(self.phd_name).get()\n",
+    "        self.logger.debug(f\"Found: {len(candidates)} people who are potential matches.\")\n",
+    "\n",
+    "        # If no candidates are found, log and return\n",
+    "        if not candidates:\n",
+    "            self.logger.warning(\"No candidates found with the given PhD name.\")\n",
+    "            return None\n",
+    "\n",
+    "        # Filter candidates based on the specified criteria\n",
+    "        for candidate in candidates:\n",
+    "            self.logger.debug(f\"Evaluating candidate: {candidate['display_name']} (ID: {candidate['id']})\")\n",
+    "            affiliation_match = self.check_affiliation(candidate)\n",
+    "            title_match = self.check_authored_work(candidate)\n",
+    "\n",
+    "            if criteria == 'both':\n",
+    "                if affiliation_match and title_match:\n",
+    "                    self.phd_candidate = candidate\n",
+    "                    self.logger.info(f\"PhD candidate confirmed: {candidate['display_name']}\")\n",
+    "                    break\n",
+    "                else:\n",
+    "                    self.logger.debug(\"No match found for both criteria. Moving to next candidate.\")\n",
+    "            elif criteria in ['affiliation', 'either']:\n",
+    "                if affiliation_match:\n",
+    "                    self.phd_candidate = candidate\n",
+    "                    self.logger.info(f\"PhD candidate confirmed by affiliation: {candidate['display_name']}\")\n",
+    "                    break\n",
+    "                else:\n",
+    "                    self.logger.debug(\"No affiliation match found. Moving to next candidate.\")\n",
+    "            elif criteria == ['title', 'either']:\n",
+    "                if title_match:\n",
+    "                    self.phd_candidate = candidate\n",
+    "                    self.logger.info(f\"PhD candidate confirmed by title: {candidate['display_name']}\")\n",
+    "                    break\n",
+    "                else:\n",
+    "                    self.logger.debug(\"No title match found. Moving to next candidate.\")\n",
+    "\n",
+    "        if not self.phd_candidate:\n",
+    "            self.logger.warning(\"PhD candidate not found or criteria not met.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            return self.phd_candidate\n",
+    "\n",
+    "    def check_affiliation(self, candidate):\n",
+    "        \"\"\"\n",
+    "        Check if the candidate has the correct affiliation in the target years.\n",
+    "        \"\"\"\n",
+    "        affiliations = candidate.get('affiliations', [])\n",
+    "        match_found = False\n",
+    "\n",
+    "        if self.verbosity == 'DEBUG':\n",
+    "            self.logger.debug(f\"Target Institution: '{self.institution}', Target Years: {self.target_years}\")\n",
+    "\n",
+    "        for affiliation in affiliations:\n",
+    "            institution_name = affiliation['institution']['display_name']\n",
+    "            years = affiliation.get('years', [])\n",
+    "            is_match = (self.institution == institution_name) and any(year in self.target_years for year in years)\n",
+    "            self.logger.debug(\n",
+    "                f\"Checking affiliation: Candidate Institution '{institution_name}', Years: {years} - \"\n",
+    "                f\"Match Found: {'Yes' if is_match else 'No'}\"\n",
+    "            )\n",
+    "            if is_match:\n",
+    "                match_found = True\n",
+    "                break  # Stop checking after a match is found\n",
+    "\n",
+    "        if not match_found:\n",
+    "            self.logger.debug(\"No affiliation match found for this candidate.\")\n",
+    "\n",
+    "        return match_found\n",
+    "\n",
+    "    def check_authored_work(self, candidate):\n",
+    "        \"\"\"\n",
+    "        Check if the candidate has authored the specified title.\n",
+    "        \"\"\"\n",
+    "        candidate_id = candidate['id']\n",
+    "        if self.verbosity == 'DEBUG':\n",
+    "            self.logger.debug(f\"Target Title: '{self.title}'\")\n",
+    "\n",
+    "        works = Works().filter(author={\"id\": candidate_id}).get()\n",
+    "        match_found = False\n",
+    "\n",
+    "        for work in works:\n",
+    "            work_title = work['title']\n",
+    "            if not work_title:\n",
+    "                continue\n",
+    "            is_match = self.title.lower() == work_title.lower()\n",
+    "            self.logger.debug(\n",
+    "                f\"Checking work: Candidate Work Title '{work_title}' - Match Found: {'Yes' if is_match else 'No'}\"\n",
+    "            )\n",
+    "            if is_match:\n",
+    "                match_found = True\n",
+    "                break  # Stop checking after a match is found\n",
+    "\n",
+    "        if not match_found:\n",
+    "            self.logger.debug(\"No title match found for this candidate.\")\n",
+    "\n",
+    "        return match_found\n",
+    "\n",
+    "    def get_candidate_affiliations(self, candidate):\n",
+    "        \"\"\"\n",
+    "        Returns a set of institution names that the candidate was affiliated with in the target years.\n",
+    "        \"\"\"\n",
+    "        affiliations = candidate.get('affiliations', [])\n",
+    "        institutions = set()\n",
+    "        for affiliation in affiliations:\n",
+    "            institution_name = affiliation['institution']['display_name']\n",
+    "            affiliation_years = affiliation.get('years', [])\n",
+    "            if any(year in self.target_years for year in affiliation_years):\n",
+    "                institutions.add(institution_name)\n",
+    "        return institutions\n",
+    "\n",
+    "    def find_potential_supervisors(self):\n",
+    "        \"\"\"\n",
+    "        Find potential supervisors among the contributors based on shared affiliations with the PhD candidate\n",
+    "        in the target years.\n",
+    "        \"\"\"\n",
+    "        if not self.phd_candidate:\n",
+    "            self.logger.warning(\"PhD candidate not confirmed. Cannot find potential supervisors.\")\n",
+    "            return []\n",
+    "\n",
+    "        # Get PhD candidate's affiliations in target years\n",
+    "        phd_affiliations = self.get_candidate_affiliations(self.phd_candidate)\n",
+    "        if not phd_affiliations:\n",
+    "            self.logger.warning(\"PhD candidate has no affiliations in target years. Cannot find potential supervisors.\")\n",
+    "            return []\n",
+    "\n",
+    "        # Log the target institutions (affiliations of the PhD candidate in the target years)\n",
+    "        self.logger.debug(f\"Target Institutions: {phd_affiliations}, Target Years: {self.target_years}\")\n",
+    "        self.logger.info(\"Searching for potential supervisors among contributors.\")\n",
+    "\n",
+    "        for contributor_name in self.contributors:\n",
+    "            self.logger.debug(f\"Searching for contributor: {contributor_name}\")\n",
+    "            # Search for contributors in OpenAlex\n",
+    "            candidates = Authors().search(contributor_name).get()\n",
+    "            self.logger.debug(f\"Found: {len(candidates)} candidates for contributor '{contributor_name}'.\")\n",
+    "\n",
+    "            # If no candidates are found, log and continue to next contributor\n",
+    "            if not candidates:\n",
+    "                self.logger.debug(f\"No candidates found for contributor: {contributor_name}\")\n",
+    "                continue\n",
+    "\n",
+    "            supervisor_found = False\n",
+    "            for candidate in candidates:\n",
+    "                # Get supervisor's affiliations in target years\n",
+    "                supervisor_affiliations = self.get_candidate_affiliations(candidate)\n",
+    "\n",
+    "                # Check for shared affiliations\n",
+    "                shared_affiliations = phd_affiliations.intersection(supervisor_affiliations)\n",
+    "\n",
+    "                # Logging per institution we are checking\n",
+    "                for institution in supervisor_affiliations:\n",
+    "                    is_match = institution in phd_affiliations\n",
+    "                    self.logger.debug(\n",
+    "                        f\"Checking affiliation: Potential Supervisor '{candidate['display_name']}' Institution '{institution}' - \"\n",
+    "                        f\"Match Found: {'Yes' if is_match else 'No'}\"\n",
+    "                    )\n",
+    "\n",
+    "                if shared_affiliations:\n",
+    "                    self.potential_supervisors.append(candidate)\n",
+    "                    self.logger.info(f\"Potential supervisor found: {candidate['display_name']} with shared institutions {shared_affiliations}\")\n",
+    "                    supervisor_found = True\n",
+    "                    break  # Assuming the first match suffices\n",
+    "\n",
+    "            if not supervisor_found:\n",
+    "                self.logger.debug(f\"No shared affiliations found for contributor: {contributor_name}\")\n",
+    "\n",
+    "        # Log the total number of contributors with matches\n",
+    "        self.logger.info(\n",
+    "            f\"Total contributors with matches: {len(self.potential_supervisors)} out of {len(self.contributors)}\"\n",
+    "        )\n",
+    "\n",
+    "        if not self.potential_supervisors:\n",
+    "            self.logger.warning(\"No potential supervisors found.\")\n",
+    "        return self.potential_supervisors\n",
+    "\n",
+    "    def get_results(self):\n",
+    "        \"\"\"\n",
+    "        Return the OpenAlex ID pairs where matches are found.\n",
+    "        \"\"\"\n",
+    "        if not self.phd_candidate:\n",
+    "            self.logger.warning(\"No results to return; PhD candidate was not found.\")\n",
+    "            return None\n",
+    "        phd_id = self.phd_candidate['id']\n",
+    "        supervisor_ids = [supervisor['id'] for supervisor in self.potential_supervisors]\n",
+    "        self.logger.info(f\"Returning results: PhD ID {phd_id}, Supervisor IDs {supervisor_ids}\")\n",
+    "        return {'phd_id': phd_id, 'supervisor_ids': supervisor_ids}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test for one row\n",
+    "\n",
+    "if False:\n",
+    "    # Assume we are working with the first row of the DataFrame\n",
+    "    row = pubs_df.iloc[0]\n",
+    "\n",
+    "    # Extract necessary fields\n",
+    "    phd_name = row['phd_name']\n",
+    "    title = row['title']\n",
+    "    year = int(row['year'])\n",
+    "    institution = row['institution']\n",
+    "    contributors = [row[f'contributor_{i}'] for i in range(1, 11) if pd.notna(row[f'contributor_{i}'])]\n",
+    "\n",
+    "    # Create an instance of AuthorRelations with desired verbosity ('NONE', 'MEDIUM', 'DETAILED')\n",
+    "    years_tolerance = -1  # years tolerance\n",
+    "    author_relations = AuthorRelations(\n",
+    "        phd_name=phd_name,\n",
+    "        title=title,\n",
+    "        year=year,\n",
+    "        institution=institution,\n",
+    "        contributors=contributors,\n",
+    "        years_tolerance=years_tolerance,\n",
+    "        verbosity='DEBUG'\n",
+    "    )\n",
+    "\n",
+    "    # Search for the PhD candidate using both criteria\n",
+    "    author_relations.search_phd_candidate(criteria='title')\n",
+    "\n",
+    "    # Find potential supervisors among the contributors\n",
+    "    author_relations.find_potential_supervisors()\n",
+    "\n",
+    "    # Get the OpenAlex ID pairs\n",
+    "    results = author_relations.get_results()\n",
+    "    print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to process each row\n",
+    "def process_row(row):\n",
+    "    # Extract necessary fields\n",
+    "    phd_name = row['phd_name']\n",
+    "    title = row['title']\n",
+    "    year = int(row['year'])\n",
+    "    institution = row['institution']\n",
+    "    contributors = [row[f'contributor_{i}'] for i in range(1, 11) if pd.notna(row.get(f'contributor_{i}', None))]\n",
+    "    \n",
+    "    # Create an instance of AuthorRelations\n",
+    "    author_relations = AuthorRelations(\n",
+    "        phd_name=phd_name,\n",
+    "        title=title,\n",
+    "        year=year,\n",
+    "        institution=institution,\n",
+    "        contributors=contributors,\n",
+    "        years_tolerance=-1,  # Adjust as needed\n",
+    "        verbosity='DEBUG'  # Set to 'NONE' for production\n",
+    "    )\n",
+    "    \n",
+    "    # Search for the PhD candidate using the desired criteria\n",
+    "    author_relations.search_phd_candidate(criteria='either')\n",
+    "    \n",
+    "    # Find potential supervisors among the contributors\n",
+    "    author_relations.find_potential_supervisors()\n",
+    "    \n",
+    "    # Get the OpenAlex ID pairs\n",
+    "    results = author_relations.get_results()\n",
+    "    \n",
+    "    # Return the results along with the original row index or any additional data you need\n",
+    "    return {\n",
+    "        'phd_name': phd_name,\n",
+    "        'phd_id': results.get('phd_id') if results else None,\n",
+    "        'supervisor_ids': results.get('supervisor_ids') if results else None\n",
+    "    }\n",
+    "\n",
+    "# Apply the function to each row using DataFrame.apply\n",
+    "results_list = pubs_df.apply(process_row, axis=1).tolist()\n",
+    "\n",
+    "# Convert the results into a DataFrame\n",
+    "results_df = pd.DataFrame(results_list)\n",
+    "\n",
+    "results_df.to_csv('data/output/matched_pairs.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
