Fix and clean up confirmation of candidate PhD Closes #12

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -237,27 +237,21 @@
     "            affiliation_match = self.check_affiliation(candidate)\n",
     "            title_match = self.check_authored_work(candidate)\n",
     "\n",
-    "            if criteria == 'both':\n",
-    "                if affiliation_match and title_match:\n",
-    "                    self.phd_candidate = candidate\n",
-    "                    self.logger.info(f\"PhD candidate confirmed: {candidate['display_name']}\")\n",
-    "                    break\n",
-    "                else:\n",
-    "                    self.logger.debug(\"No match found for both criteria. Moving to next candidate.\")\n",
-    "            elif criteria in ['affiliation', 'either']:\n",
-    "                if affiliation_match:\n",
-    "                    self.phd_candidate = candidate\n",
-    "                    self.logger.info(f\"PhD candidate confirmed by affiliation: {candidate['display_name']}\")\n",
-    "                    break\n",
-    "                else:\n",
-    "                    self.logger.debug(\"No affiliation match found. Moving to next candidate.\")\n",
-    "            elif criteria == ['title', 'either']:\n",
-    "                if title_match:\n",
-    "                    self.phd_candidate = candidate\n",
-    "                    self.logger.info(f\"PhD candidate confirmed by title: {candidate['display_name']}\")\n",
-    "                    break\n",
-    "                else:\n",
-    "                    self.logger.debug(\"No title match found. Moving to next candidate.\")\n",
+    "            match_type = None\n",
+    "\n",
+    "            if affiliation_match and title_match:\n",
+    "                match_type = 'affiliation and title'\n",
+    "            elif criteria == ('affiliation' or 'either') and affiliation_match:\n",
+    "                match_type = 'affiliation'\n",
+    "            elif criteria == ('title' or 'either') and title_match:\n",
+    "                match_type = 'title'     \n",
+    "\n",
+    "            if match_type:\n",
+    "                self.phd_candidate = candidate\n",
+    "                self.logger.info(f\"PhD candidate confirmed by '{match_type}': {candidate['display_name']}\")\n",
+    "                break\n",
+    "            else:\n",
+    "                self.logger.debug(f\"No match found for criteria: {criteria}. Moving to next candidate.\")\n",
     "\n",
     "        if not self.phd_candidate:\n",
     "            self.logger.warning(\"PhD candidate not found or criteria not met.\")\n",
