Make logging entry for PhD matches nicer

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -248,7 +248,7 @@
     "\n",
     "            if match_type:\n",
     "                self.phd_candidate = candidate\n",
-    "                self.logger.info(f\"PhD candidate confirmed by '{match_type}': {candidate['display_name']}\")\n",
+    "                self.logger.info(f\"PhD candidate confirmed by {match_type}: {candidate['display_name']}\")\n",
     "                break\n",
     "            else:\n",
     "                self.logger.debug(f\"No match found for criteria: {criteria}. Moving to next candidate.\")\n",
