Remove import of pyalex submodules

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyalex import Works, Authors, Sources, Institutions, Topics, Publishers, Funders, Concepts\n",
-    "import pyalex # seems to be the only way to call `pyalex.config.email = email_address`\n",
+    "#from pyalex import Works, Authors, Sources, Institutions, Topics, Publishers, Funders, Concepts\n",
+    "import pyalex # importing full package seems to be the only way to call `pyalex.config.email = email_address`\n",
     "import pandas as pd\n",
     "from os import path\n",
     "\n",
