Adjust subset.ipynb to standard of other notebooks

--- a/subset.ipynb
+++ b/subset.ipynb
@@ -13,6 +13,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Automatically reloads any modules that are imported, \n",
+    "# so that any changes made to the module files are reflected # without needing to restart the Jupyter kernel.\n",
+    "# load autoreload module\n",
+    "%load_ext autoreload\n",
+    "# mode 1 reloads only when an import statement is called. For production\n",
+    "# mode 2 reloads before execution of every cell\n",
+    "%autoreload 2\n",
+    "\n",
+    "# limit the number of rows that are shown with printing dataframes\n",
+    "pd.set_option('display.max_rows', 5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -118,8 +143,9 @@
    "outputs": [],
    "source": [
     "df = new_df\n",
-    "df = df.dropna(subset=['author_name', 'title', 'contributor_1'])\n",
-    "df.reset_index(drop=True, inplace=True)"
+    "df = df.dropna(subset=['phd_name', 'title', 'contributor_1'])\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "df"
    ]
   },
   {
@@ -128,8 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop_duplicates(subset=['author_name'], keep='last')\n",
-    "df.reset_index(drop=True, inplace=True)"
+    "df = df.drop_duplicates(subset=['phd_name'], keep='last')\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "df"
    ]
   },
   {
@@ -151,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-cleaned-data",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
