--- a/subset.ipynb
+++ b/subset.ipynb
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('biomedical_data.csv', index=False)"
+    "df.to_csv('data/cleaned/biomedical_data.csv', index=False)"
    ]
   }
  ],
