Replace dynamic year with fixed reference year

--- a/subset.ipynb
+++ b/subset.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datetime format for `year`"
+    "### Filter out publications that are older than 5 years"
    ]
   },
   {
@@ -77,12 +77,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# datetime change, run once\n",
-    "for index, value in enumerate(subset['year']):\n",
-    "    subset.at[index, 'year'] = datetime.strptime(str(value), '%Y')\n",
-    "date_5_years_ago = datetime.now() - timedelta(days=5*365)\n",
-    "new_df = subset[subset['year'] >= date_5_years_ago]\n",
-    "new_df = new_df.reset_index(drop=True)"
+    "# pick a reference year for reproducibility\n",
+    "reference_year = 2024 # year where the study was conducted/started\n",
+    "year_diff = 5 # look up to 5 years back\n",
+    "\n",
+    "date_n_years_ago = reference_year - year_diff\n",
+    "\n",
+    "new_df = subset.query('year >= @date_n_years_ago')\n",
+    "new_df = new_df.reset_index(drop=True)\n",
+    "\n",
+    "new_df"
    ]
   },
   {
