Reflow code for better consistency and readability

--- a/subset.ipynb
+++ b/subset.ipynb
@@ -60,8 +60,12 @@
    "outputs": [],
    "source": [
     "biomedical = ['amcpub', 'lumc', 'vumc', 'umcu'] \n",
-    "subset = df[df['institution'].isin(biomedical)]\n",
-    "subset = subset.reset_index(drop=True)"
+    "df_subset = df.query('institution in @biomedical')\n",
+    "df_subset = df_subset.reset_index(drop=True)\n",
+    "\n",
+    "df_subset = df.copy()\n",
+    "\n",
+    "df_subset"
    ]
   },
   {
@@ -83,10 +87,10 @@
     "\n",
     "date_n_years_ago = reference_year - year_diff\n",
     "\n",
-    "new_df = subset.query('year >= @date_n_years_ago')\n",
-    "new_df = new_df.reset_index(drop=True)\n",
+    "df_recent = df_subset.query('year >= @date_n_years_ago')\n",
+    "df_recent = df_recent.reset_index(drop=True)\n",
     "\n",
-    "new_df"
+    "df_recent\n"
    ]
   },
   {
@@ -102,12 +106,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for column in new_df.columns:\n",
-    "    for index, value in new_df[column].items():\n",
-    "        if str(value).startswith(','):\n",
-    "            new_df.at[index, column] = np.nan\n",
-    "        if str(value).startswith('Surgery'):             # from manual check \n",
-    "            new_df.at[index, column] = np.nan"
+    "df_filter = df_recent.copy()\n",
+    "\n",
+    "# get rid of contributors that start with comma or \"Surgery\"\n",
+    "contributor_columns = df_filter.filter(like=\"contributor_\").columns # Apply the replacement only to the \"contributor_\" columns\n",
+    "df_filter[contributor_columns] = df_filter[contributor_columns].replace(\n",
+    "    {r'^,.*': np.nan, r'^Surgery.*': np.nan},\n",
+    "    regex=True\n",
+    ")\n",
+    "\n",
+    "# Filter out rows where all \"contributor_\" columns are NaN\n",
+    "nan_rows = df_filter[contributor_columns].isnull().all(axis=1)\n",
+    "df_filter = df_filter[~nan_rows].reset_index(drop=True)\n",
+    "\n",
+    "# Shift non-NaN values to the left in the contributor columns\n",
+    "# i.e. promote contributors until we have an uninterrupted sequence of contributors\n",
+    "df_filter[contributor_columns] = df_filter[contributor_columns].apply(\n",
+    "   lambda x: pd.Series(x.dropna().tolist() + [np.nan]*(len(x) - x.count())),\n",
+    "   axis=1 # apply function per row\n",
+    ")\n",
+    "\n",
+    "df_filter\n"
    ]
   },
   {
@@ -116,51 +135,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nan_rows = new_df.iloc[:, 7:17].isnull().all(axis=1)\n",
-    "new_df = new_df[~nan_rows]\n",
-    "new_df.reset_index(drop=True, inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, row in new_df.iterrows():\n",
-    "    for i in range(1, 10):\n",
-    "        current_col = 'contributor_' + str(i)\n",
-    "        next_col = 'contributor_' + str(i + 1)\n",
-    "        \n",
-    "        # Check if current column is NaN and next column is not NaN\n",
-    "        if pd.isna(row[current_col]) and not pd.isna(row[next_col]):\n",
-    "            print(row)\n",
-    "            # Replace current column with next column and set next column to NaN\n",
-    "            new_df.at[index, current_col] = row[next_col]\n",
-    "            new_df.at[index, next_col] = np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = new_df\n",
-    "df = df.dropna(subset=['phd_name', 'title', 'contributor_1'])\n",
-    "df.reset_index(drop=True, inplace=True)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop_duplicates(subset=['phd_name'], keep='last')\n",
-    "df.reset_index(drop=True, inplace=True)\n",
-    "df"
+    "df_final = df_filter.copy()\n",
+    "df_final = df_final.dropna(subset=['phd_name', 'title', 'contributor_1'])\n",
+    "df_final = df_final.drop_duplicates(subset=['phd_name'], keep='last')\n",
+    "\n",
+    "df_final = df_final.reset_index(drop=True)\n",
+    "\n",
+    "df_final"
    ]
   },
   {
@@ -176,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/cleaned/biomedical_data.csv', index=False)"
+    "df_final.to_csv('data/cleaned/biomedical_data.csv', index=False)"
    ]
   }
  ],
