--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -50,7 +50,7 @@
     "# mode 2 reloads before execution of every cell\n",
     "%autoreload 2\n",
     "\n",
-    "# limit the number of rows that are shown with printing dataframes\n",
+    "# limit the number of rows that are shown with printing data frames\n",
     "pd.set_option('display.max_rows', 5)"
    ]
   },
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load, and if notvailable, download the spacy nlp model \n",
+    "# Load, and if not available, download the spacy nlp model \n",
     "model_name = \"xx_ent_wiki_sm\" # multilingual NER model\n",
     "nlp = ensure_and_load_spacy_model(model_name)"
    ]
@@ -220,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
