--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -37,7 +37,7 @@
     "from os import path\n",
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
-    "from src.author_relations import AuthorRelations, process_row"
+    "from src.author_relations import AuthorRelations, find_phd_and_supervisors_in_row"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "# Apply the function to each row using DataFrame.apply\n",
-    "results_list = pubs_df.apply(process_row, axis=1).tolist()\n",
+    "results_list = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1).tolist()\n",
     "\n",
     "# Convert the results into a DataFrame\n",
     "results_df = pd.DataFrame(results_list)\n",
