--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -24,9 +24,7 @@
     "import pandas as pd\n",
     "\n",
     "# custom functions\n",
-    "from src.clean_names_helpers import remove_non_person_contributors_and_export\n",
-    "from src.clean_names_helpers import format_name_to_lastname_firstname\n",
-    "from src.clean_names_helpers import ensure_and_load_spacy_model"
+    "from src.clean_names_helpers import remove_non_person_contributors_and_export, format_name_to_lastname_firstname, ensure_and_load_spacy_model"
    ]
   },
   {
