--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "# Standardize names\n",
-    "pairs_std = pairs_filtered\n",
+    "pairs_std = pairs_filtered.copy()\n",
     "# Apply name standardization to the contributor column\n",
     "pairs_std['contributor'] = pairs_filtered['contributor'].apply(format_name_to_lastname_firstname)"
    ]
