Fetch supervisors from Responsible Supervision pilot github

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -37,7 +37,9 @@
     "from os import path\n",
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
-    "from src.author_relations import AuthorRelations, find_phd_and_supervisors_in_row"
+    "from src.author_relations import AuthorRelations, find_phd_and_supervisors_in_row\n",
+    "from src.io_helpers import fetch_supervisors_from_pilot_dataset\n",
+    "from src.clean_names_helpers import format_name_to_lastname_firstname"
    ]
   },
   {
@@ -105,7 +107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Load and pre-process cleaned dataset"
+    "## 2. Load datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Cleaned processed NARCIS dataset"
    ]
   },
   {
@@ -138,6 +147,41 @@
     "# replace institution abbreviation with names that can be found in OpenAlex\n",
     "pubs_unabbrev_df = unabbreviate_institutions(pubs_df, 'institution')\n",
     "pubs_unabbrev_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Priority supervisor list from ResponsibleSupervision pilot\n",
+    "\n",
+    "This dataset was created during the Responsible Supervision pilot project, see [here](https://github.com/tamarinde/ResponsibleSupervision/tree/main/Pilot-responsible-supervision)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of the GitHub directory\n",
+    "repo_url = \"https://github.com/tamarinde/ResponsibleSupervision/tree/main/Pilot-responsible-supervision/data/spreadsheets\"\n",
+    "\n",
+    "# Fetch the unique supervisors\n",
+    "try:\n",
+    "    supervisors = fetch_supervisors_from_pilot_dataset(\n",
+    "        repo_url=repo_url,\n",
+    "        file_extension=\".xlsx\",\n",
+    "        verbosity=True  # Enable detailed output\n",
+    "    )\n",
+    "    \n",
+    "    # Apply name standardization\n",
+    "    supervisors_std = [format_name_to_lastname_firstname(name) for name in supervisors]\n",
+    "    \n",
+    "    print(\"Unique Supervisors:\")\n",
+    "    print(supervisors_std)\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n"
    ]
   },
   {
