--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -37,7 +37,7 @@
     "from os import path\n",
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
-    "from src.author_relations import AuthorRelations, find_phd_and_supervisors_in_row\n",
+    "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row\n",
     "from src.io_helpers import fetch_supervisors_from_pilot_dataset\n",
     "from src.clean_names_helpers import format_name_to_lastname_firstname"
    ]
