Cache supervisors from pilot

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -37,7 +37,7 @@
     "from os import path\n",
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
-    "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row\n",
+    "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
     "from src.io_helpers import fetch_supervisors_from_pilot_dataset\n",
     "from src.clean_names_helpers import format_name_to_lastname_firstname"
    ]
@@ -164,24 +164,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# URL of the GitHub directory\n",
     "repo_url = \"https://github.com/tamarinde/ResponsibleSupervision/tree/main/Pilot-responsible-supervision/data/spreadsheets\"\n",
+    "csv_path = \"output/sups_pilot.csv\"\n",
     "\n",
-    "# Fetch the unique supervisors\n",
     "try:\n",
-    "    supervisors = fetch_supervisors_from_pilot_dataset(\n",
-    "        repo_url=repo_url,\n",
-    "        file_extension=\".xlsx\",\n",
-    "        verbosity=True  # Enable detailed output\n",
-    "    )\n",
-    "    \n",
-    "    # Apply name standardization\n",
-    "    supervisors_std = [format_name_to_lastname_firstname(name) for name in supervisors]\n",
-    "    \n",
-    "    print(\"Unique Supervisors:\")\n",
-    "    print(supervisors_std)\n",
+    "    # Attempt to read the supervisors in the pilot dataset from csv_path\n",
+    "    # If it fails, we get them again from GitHub\n",
+    "    supervisors_ids = get_supervisors_openalex_ids(repo_url, csv_path)\n",
+    "    print(\"Unique Supervisors with OpenAlex IDs:\")\n",
+    "    print(supervisors_ids)\n",
     "except Exception as e:\n",
-    "    print(f\"An error occurred: {e}\")\n"
+    "    print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "# NOTE: The problem with this is that I am getting a lot of matches in OA with all the supervisors. But how do I match them with the spelling and ID I will find in my final dataset?\n",
+    "# SOLUTION: I will just list all the author IDs here that I come across. We compare those with the IDs in the final dataset, and whenever we have a match we give the bonus points to that supervisor! \n",
+    "\n",
+    "# Still looking up all the supervisors in OA takes a while and some queries. So I should buffer the result to a csv and only "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyalex import Authors\n",
+    "\n",
+    "fetch_author_openalex_names_ids(\"van de beek, diederik\")"
    ]
   },
   {
